2007-05-14  Hendrik Tews  <tews@tandem.cs.ru.nl>

        * fixed memcheck config default
        
        * added config support for memcheck
        * documentation updates
        * changes towards a new release

2007-05-02  Hendrik Tews  <tews@tandem.cs.ru.nl>

        * regression tests ok
        * merge upstream, versions:
        elsa-stack: 9 smbase: 491 ast: 282 elkhound: 1045 elsa: 2476

        * remove new files from vendor import

2007-04-25  Hendrik Tews  <tews@tandem.cs.ru.nl>

        * propagation of latest ml_ctype.ast changes

2007-04-24  Hendrik Tews  <tews@tandem.cs.ru.nl>

        * added to the interface of dense_set, superast

2007-04-20  Hendrik Tews  <tews@tandem.cs.ru.nl>

        Elsa, Ast
        * add TemplateInfo.getKind

        Ast
        * more dummies
        * added TemplateInfo and InheritedTemplateParams

2007-04-19  Hendrik Tews  <tews@tandem.cs.ru.nl>

        AST
        * added dummy record copies to force compile errors when the types
          in the ast change
        * exploit new type_id feature of memcheck in check_oast
        
        Elsa

        * added TemplateInfo and InheritedTemplateParams to ocaml
          reflection; in ocaml those are different record types, although
          they are in a class hierarchy with TemplateParams. However,
          TemplateParams objects seem not to be exist.
        * rename scope.template_params into scope_template_params
        * added circularity support for compound_info's
        * new nullables and new circularities added below        

2007-04-18  Hendrik Tews  <tews@gromit>

        * new nullables
           Variable.templInfo (Variable.templateInfo()) (without hint!)
           TemplateInfo.instantiationOf
           TemplateInfo.specializationOf (without hint!)
           TemplateInfo.partialInstantiationOf (without hint!)
           TemplateInfo.definitionTemplateInfo
           TemplateInfo.defnScope
           TemplateInfo.var
        * new circularities