@@ -1,14 +1,20 @@
+/\.cvsignore$
 ^elsa/ChangeLog$
+^elsa/smbase/gendoc$
+^elsa/ast/gendoc$
 ^elsa/ast/astgen_util.ml$
 ^elsa/ast/ocamlhelp.cc$
 ^elsa/ast/ocamlhelp.h$
 ^elsa/ast/ocsstr.cc$
 ^elsa/ast/ocsstr.h$
-^elsa/ChangeLog$
+^elsa/elkhound/gendoc$
+^elsa/elsa/gendoc$
 ^elsa/elsa/all.ast$
 ^elsa/elsa/ast_annotation.ml$
 ^elsa/elsa/ast_annotation.mli$
 ^elsa/elsa/ast_marshal.ml$
+^elsa/elsa/oast_header.ml$
+^elsa/elsa/oast_header_version.ml$
 ^elsa/elsa/caml_callbacks.ml$
 ^elsa/elsa/cc_ml_constructors.ml$
 ^elsa/elsa/cc_ml_types.ml$
@@ -17,13 +23,6 @@
 ^elsa/elsa/doc/tracing-options.txt$
 ^elsa/elsa/elsa_util.ml$
 ^elsa/elsa/gnu_attribute_hack.ast$
-^elsa/elsa/in/c/.cvsignore$
-^elsa/elsa/in/c99/.cvsignore$
-^elsa/elsa/in/gnu/bugs/.cvsignore$
-^elsa/elsa/in/gnu/cil/.cvsignore$
-^elsa/elsa/in/kandr/.cvsignore$
-^elsa/elsa/in/msvc/.cvsignore$
-^elsa/elsa/in/std/.cvsignore$
 ^elsa/elsa/ml_ctype.ast$
 ^elsa/elsa/ml_ctype_constructors.ml$
 ^elsa/elsa/ml_ctype.ml$
@@ -32,13 +31,13 @@
 ^elsa/snapshot$
 ^elsa/addcheck_ignored_files$
 ^elsa/elsa/in/big/gz/iostream-4.1.2.i.gz
-^/tmp/tews/elsa-2005.08.22b/ast/agrampar.codes.h$
-^/tmp/tews/elsa-2005.08.22b/ast/agrampar.tab.cc$
-^/tmp/tews/elsa-2005.08.22b/ast/agrampar.tab.h$
-^/tmp/tews/elsa-2005.08.22b/ast/exampletest.cc$
-^/tmp/tews/elsa-2005.08.22b/elkhound/c/lexer1yy.cc$
-^/tmp/tews/elsa-2005.08.22b/elkhound/examples/arith/arithyy.cc$
-^/tmp/tews/elsa-2005.08.22b/elkhound/grampar.codes.h$
-^/tmp/tews/elsa-2005.08.22b/elkhound/grampar.tab.cc$
-^/tmp/tews/elsa-2005.08.22b/elkhound/grampar.tab.h$
-^/tmp/tews/elsa-2005.08.22b/elsa/gendoc/.xvpics$
+^/tmp/tews/orig-elsa/ast/agrampar.codes.h$
+^/tmp/tews/orig-elsa/ast/agrampar.tab.cc$
+^/tmp/tews/orig-elsa/ast/agrampar.tab.h$
+^/tmp/tews/orig-elsa/ast/exampletest.cc$
+^/tmp/tews/orig-elsa/elkhound/c/lexer1yy.cc$
+^/tmp/tews/orig-elsa/elkhound/examples/arith/arithyy.cc$
+^/tmp/tews/orig-elsa/elkhound/grampar.codes.h$
+^/tmp/tews/orig-elsa/elkhound/grampar.tab.cc$
+^/tmp/tews/orig-elsa/elkhound/grampar.tab.h$
+^/tmp/tews/orig-elsa/elsa/gendoc/.xvpics$
